@@ -52,6 +52,7 @@ Minor features
  * Improved L10N and I18N for revisions list (Roel Bruggink)
  * The multiple image uploader now displays details of server errors (Nigel Fletton)
  * Added ``WAGTAIL_APPEND_SLASH`` setting to determine whether page URLs end in a trailing slash - see :ref:`append_slash` (Andrew Tork Baker)
+ * Added auto resizing text field, richtext field, and snippet chooser to styleguide (Liam Brenner)
 
 Bug fixes
 ~~~~~~~~~
